Fixed overflow and blur issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,56 @@
+html, body {
+  overflow: hidden;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  position: fixed;
+}
+
 .root {
+ 
   text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
   overflow: hidden;
   background-image: linear-gradient(rgba(25, 23, 24, 0.2) 33%, rgb(25, 23, 24) 67%);
   opacity: 1;
 }
 .backgroundImage {
+  height: 100vh;
+  background: no-repeat center center fixed; 
+  background-size: auto;
+  display: block;
+  left: -10px;
+  top:-10px;
+  bottom:-5px;
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  opacity: 1; /* Adjust the opacity as needed */
-  z-index: -1;
+  right: -10px;
+  z-index: 1;
+  -webkit-filter: blur(10px);
+  -moz-filter: blur(10px);
+  -o-filter: blur(10px);
+  -ms-filter: blur(10px);
   filter: blur(10px);
-    transform: scale(1.6);
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  margin:-10px;
+
+  opacity: 1;
+  position: fixed;
+  
+  -webkit-transform: scale(1.6);
+  transform: scale(1.6);
+  
+  z-index: -1;
+  
 }
 
 * {
@@ -28,14 +58,16 @@
 }
 
 .app {
-  overflow: hidden;
+  overflow: hidden!important;
 }
 
 .app > div {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 .row {
@@ -62,7 +94,7 @@ h2 {
 }
 
 .cardContainer {
-  width: 100vw;
+  width: 100%;
   max-width: 260px;
   height: 390px;
   margin: 16px 24px 24px;
@@ -71,7 +103,7 @@ h2 {
 .card {
   position: relative;
   background-color: #fff;
-  width: 80vw;
+  width: 260px;
   max-width: 260px;
   height: 0;
   padding-top: 150%; /* Set the aspect ratio for the card */
